# nvidia-cosmos-cookoff

./: .env.example  .gitignore  README.md
.serena/: project.yml
COSMOS-Reasining-2-POC/: AGENTS.md  README.md  pytest.ini
COSMOS-Reasining-2-POC/cctv_visibility_monitor/: package.xml  setup.cfg
COSMOS-Reasining-2-POC/docs/: AGENT_VALIDATION_REPORT.md  CAMERA_BENCHMARK_REPORT.md  FINAL_REPORT.md
COSMOS-Reasining-2-POC/dynamic_blindspot_gen/: package.xml  setup.cfg  setup.py
COSMOS-Reasining-2-POC/dynamic_blindspot_gen/config/: dynamic_blindspot_gen.yaml
COSMOS-Reasining-2-POC/dynamic_blindspot_gen/sras_dynamic_blindspot_gen/: blindspot_gen_core.py  dynamic_blindspot_gen_node.py
COSMOS-Reasining-2-POC/event_injector/: setup.cfg  setup.py
COSMOS-Reasining-2-POC/hitl_command_bridge/: package.xml  setup.py
COSMOS-Reasining-2-POC/hotl_command_surface/: package.xml  setup.py
COSMOS-Reasining-2-POC/incident_report/: package.xml  setup.py
COSMOS-Reasining-2-POC/incident_timeline/: setup.cfg  setup.py
COSMOS-Reasining-2-POC/lidar_camera_fusion/: setup.cfg  setup.py
COSMOS-Reasining-2-POC/map_readiness_gate/: package.xml  setup.cfg  setup.py
COSMOS-Reasining-2-POC/patrol_scheduler/: setup.py
COSMOS-Reasining-2-POC/reasoning_guardrails/: setup.py
COSMOS-Reasining-2-POC/robot_situation_assessor/: package.xml  setup.cfg
COSMOS-Reasining-2-POC/robot_situation_assessor/sras_robot_situation_assessor/: __init__.py
COSMOS-Reasining-2-POC/scripts/: run_b13_grounding.py  run_offline_benchmark.py
COSMOS-Reasining-2-POC/shelf_tip_risk/: package.xml  setup.py
COSMOS-Reasining-2-POC/shelf_tip_risk/config/: shelf_tip_risk.yaml
COSMOS-Reasining-2-POC/shelf_tip_risk/sras_shelf_tip_risk/: shelf_tip_risk_node.py
COSMOS-Reasining-2-POC/shelf_tip_risk/tests/: test_shelf_risk_core.py
COSMOS-Reasining-2-POC/spatial_map_overlay/: setup.cfg  setup.py
COSMOS-Reasining-2-POC/spatial_object_recognition/: setup.cfg
COSMOS-Reasining-2-POC/streaming_bridge/: package.xml  setup.cfg  setup.py
COSMOS-Reasining-2-POC/tests/: conftest.py  test_ros2_cosmos_bridge.py
Dashboard_Robotics/: AWS Isaac nowy launch.md  LOCAL_DEV.md  refactor_plan.md  research-summary.md
Dashboard_Robotics/.github/: PULL_REQUEST_TEMPLATE.md
Dashboard_Robotics/apps/ros-bridge/: pyproject.toml
Dashboard_Robotics/apps/ros-bridge/src/: camera_discovery.py  main.py
Dashboard_Robotics/config/: go2rtc.yaml
Dashboard_Robotics/docker/: docker-compose.yml
Dashboard_Robotics/docs/: aws-isaac-sim-launch-guide.md  camera-wall-architecture.md  deployment-camera-wall.md  dev-hub-executor-plan.md  fix_plan.md  handover.md  pitchdeck-gtc-2026.md  strategic-analysis-2026.md
Dashboard_Robotics/scripts/: diagnose_map.sh  remote-ops.sh  verify-rosbridge.ts
IsaacSim/: guideline.md
IsaacSim/cfn/: job-schema.json
IsaacSim/plan/: decisions.md  index.md
IsaacSim/scripts/: 10_deploy_infra.sh  11_validate_infra.sh  22_launch_dev_builder.sh  25_launch_dev_instance.sh  30_configure_dcv_shared.sh  33_create_train_lt.sh  50_terminate_train.sh  infra_outputs.json  job-runner.sh
docs/: ACCESS.md  COSMOS_RUNPOD_OPERATIONS.md  DEPLOY_MULTI_ROBOT.md  INSTANCES.md  INSTANCE_ISAAC_SIM_1.md  INSTANCE_OPENCLAW_45_26_255_5.md  MAPS.md  NEXT_STEPS.md  README.md  REASONING_LAYER_ARCHITECTURE.md  REPO_MAPPING.md  ROS2_STACK.md  VIDEO_FIX_PLAN.md  VIDEO_STREAMING_OPERATOR.md  architektura.md  multi-robot-architecture.md
go2_omniverse/: .gitignore  colorize_cloud.py  custom_rl_env.py  omnigraph.py  omniverse_sim.py  ros2.py  ros2_patched.py  run_headless.sh  run_louvre_demo.sh  run_sim_custom.sh  tf_transformations.py  warehouse_config.py
go2_omniverse/jacek_playground/: README.md  README_RL.md  README_SECURITY_DEMO.md  isaac_camera_udp_publisher.py  load_luvr_piotr.py  luvr_simulation_rl.py  notes.txt  ros2_sensor_bridge.py  run_bridge.sh  run_simulation.sh  run_simulation_rl.sh  udp_command_bridge.py
go2_omniverse/scenes/: setup_gallery_lights.py
modules/cosmos-lora-smoke/: .gitignore  README.md  TODO.md
modules/cosmos-reasoning-benchmark/: .claudeignore  PLAN.md
modules/cosmos-reasoning-benchmark/lidar_camera_fusion/: package.xml
modules/cosmos-reasoning-benchmark/lidar_camera_fusion/launch/: lidar_camera_fusion.launch.py
modules/cosmos-reasoning-benchmark/lidar_camera_fusion/sras_lidar_camera_fusion/: fusion_core.py  lidar_camera_fusion_node.py
modules/cosmos-reasoning-benchmark/reasoning_guardrails/: package.xml  setup.cfg
modules/cosmos-reasoning-benchmark/spatial_map_overlay/: package.xml
modules/cosmos-reasoning-benchmark/spatial_map_overlay/launch/: spatial_map_overlay.launch.py
modules/cosmos-reasoning-benchmark/spatial_map_overlay/sras_spatial_map_overlay/: __init__.py  spatial_map_overlay_node.py
modules/cosmos-reasoning-benchmark/spatial_map_overlay/tests/: test_spatial_overlay_core.py
modules/dashboard/: metrics_before.txt  pnpm-workspace.yaml
modules/platform/: README.md
modules/platform/repos/planner/: README.md  package.xml  setup.cfg
modules/platform/repos/planner/config/: robot_task_planner.yaml
modules/platform/repos/planner/sras_robot_task_planner/: planner_core.py  robot_task_planner_node.py
modules/platform/repos/planner/tests/: test_planner_core.py
modules/ros2-bringup/: setup.py
modules/ros2-dimos-bridge/: colored_map_builder.py
modules/ros2-task-planner/: README.md
modules/simulation/: agent_cfg.py  omniverse_sim.py  (+4 more)
notes/: 00-hackathon-context.md  01-motivation-louvre.md  02-system-overview.md  03-cosmos-benchmark.md  04-person-detection-positioning.md  05-reasoning-task-planning.md  06-task-execution.md  07-lora-smoke-detection.md  08-dashboard.md  09-use-cases.md  10-presentation-flow.md  README.md
paic2-platform/: .gitmodules
slides/: make_movie.py  narration-v2-storytelling.srt
sras_ros2_bringup/: setup.py
sras_ros2_dimos_bridge/: INSTALL.md  README.md  fix_shebang.sh  setup.py
sras_ros2_robot_task_planner/: .gitignore  setup.py
test_configs/: deploy_and_test.sh  executor_multi_test.yaml  mock_detections.py  planner_multi_test.yaml
(+812 files in other folders)
