<?xml version="1.0"?>
<package format="3">
  <name>sras_reasoning_guardrails</name>
  <version>0.1.0</version>
  <description>Reasoning guardrails policy node for safe task gating and escalation.</description>
  <maintainer email="maintainer@example.com">SRAS Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>warehouse_security_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
